; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/tls/extr_x509v3.c_x509_pkcs_oid.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/tls/extr_x509v3.c_x509_pkcs_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asn1_oid = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.asn1_oid*)* @x509_pkcs_oid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @x509_pkcs_oid(%struct.asn1_oid* %0) #0 {
  %2 = alloca %struct.asn1_oid*, align 8
  store %struct.asn1_oid* %0, %struct.asn1_oid** %2, align 8
  %3 = load %struct.asn1_oid*, %struct.asn1_oid** %2, align 8
  %4 = getelementptr inbounds %struct.asn1_oid, %struct.asn1_oid* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = icmp sge i32 %5, 5
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.asn1_oid*, %struct.asn1_oid** %2, align 8
  %9 = call i64 @x509_rsadsi_oid(%struct.asn1_oid* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %7
  %12 = load %struct.asn1_oid*, %struct.asn1_oid** %2, align 8
  %13 = getelementptr inbounds %struct.asn1_oid, %struct.asn1_oid* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 4
  %16 = load i32, i32* %15, align 4
  %17 = icmp eq i32 %16, 1
  br label %18

18:                                               ; preds = %11, %7, %1
  %19 = phi i1 [ false, %7 ], [ false, %1 ], [ %17, %11 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i64 @x509_rsadsi_oid(%struct.asn1_oid*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
